fix for bug#16407 (Events: Changes in sql_mode won't be taken into account) WL#1032 sql_mode setting was disregarded during create/alter event and wasn't set during event execution. (post-review small fixes)