sql/event.h
@@ -109,7 +109,7 @@ public:
   enum enum_event_on_completion on_completion;
   enum enum_event_status status;
   sp_head *sphead;
-
+  ulong sql_mode;
   const uchar *body_begin;
   
   bool dropped;
